fixed spacing of grid

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,9 +6,6 @@ $grid-gap: 10px;
     font-family: Roboto, sans-serif;
 }
 
-body {
-}
-
 .grid-container {
     max-width: 1200px;
     margin-left: auto !important;
@@ -18,8 +15,8 @@ body {
     display: grid;
     height: 100vh;
     grid-template-columns: auto 250px;
-    grid-template-rows: min-content max-content;
-    grid-gap: 0;
+    grid-template-rows: max-content auto;
+    grid-gap: 10px;
     grid-template-areas: "graph info" "graph user";
 }
 
@@ -29,7 +26,6 @@ body {
 
 .info {
     grid-area: info;
-    height: 100%;
 }
 
 .user {
